# pyJokulhlaup

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
Greenland/: readme.md
Greenland/analysis/: plot_Greenland.py  plot_Greenland_figures.py
Greenland/analysis/SubglacialLakes/: Lake0.exp  Lake0.shp  Lake0.shx  Lake1.exp  Lake1.shp  Lake1.shx  Lake2.exp  Lake2.shp  Lake2.shx  Lake3.dbf  Lake3.exp  Lake3.shp  Lake3.shx
manuscript/: Jokulhlaup.bib  MANUSCRIPT-JGLAC.tex  MANUSCRIPT.aux  MANUSCRIPT.bbl  MANUSCRIPT.blg  MANUSCRIPT.tex  OLDSTYLE.tex  igs.cls  summary.md
src/: run_job.py  utils.py
synthetic/: default.py  defaults.py  defaults_BUDD.py  defaults_SCHOOF.py  readme.md
synthetic/analysis/: plot_main_figures.py
synthetic/analysis/figures/sensitivityTests/: PaperFigure3Components.eps
synthetic/data/geometry/: funnel_domain.exp  make_mesh.py  make_surface_bed.py  square_domain.exp
synthetic/experiments/: main_figure_parameters.csv  run_default.sh  run_main_figure_suite.sh  run_suite.sh  run_supp_figure_suite.sh  suite_parameters.csv  supp_figure_parameters.csv
