[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyJokulhlaup"
version =  '2025.0.0'
requires-python = '>=3.12'
authors = [
    {name='Adam Hepburn', email='adam.hepburn@aber.ac.uk'}
]
readme = 'README.md'
license = {file='LICENSE'}

[tool.setuptools]
packages = ["src"]